# starcoder2-self-align

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  sanitize.sh  self_ossinstruct_sc2.sh  self_ossinstruct_sc2_parallel.sh
evaluation/: README.md  ds_1000.py  text2code.py  text2code_vllm.py
evaluation/evalplus_results/: evalplus-starcoder2-15b-instruct-v0.1-humaneval.jsonl  evalplus-starcoder2-15b-instruct-v0.1-humaneval_eval_results.json  evalplus-starcoder2-15b-instruct-v0.1-mbpp.jsonl  evalplus-starcoder2-15b-instruct-v0.1-mbpp_eval_results.json
prompts/: self-ossinstruct-fewshot.txt
seed_gathering/: README.md  benchmark_data.py  filter_dataset.py  generate_from_the_stack.py  high_quality_subset.py  requirements.txt  tree_sitter_parser.py
src/star_align/: clean_data.py  collect_snippets.py  execution_filter.py  llm_wrapper.py  minhash_dedup.py  prompt_template.py  sanitize_data.py  self_ossinstruct.py  train.py  utils.py
src/star_align/decontamination/: benchmark_data.py  find_substrings.py
